--- a/src/components/ThemeToggle.astro
+++ b/src/components/ThemeToggle.astro
@@ -3,12 +3,12 @@
 
 <button
   id="themeToggle"
-  class="p-2 text-gray-500 hover:text-gray-900 dark:text-gray-400 dark:hover:text-white"
+  class="text-gray-500 hover:bg-neutral-200 dark:hover:bg-neutral-700 rounded-md"
   aria-label="Toggle theme"
 >
   <svg
     id="sun-icon"
-    class="w-5 h-5 hidden dark:block"
+    class="w-4 h-4 hidden dark:block"
     fill="none"
     stroke="currentColor"
     viewBox="0 0 24 24"
@@ -22,7 +22,7 @@
   </svg>
   <svg
     id="moon-icon"
-    class="w-5 h-5 block dark:hidden"
+    class="w-4 h-4 block dark:hidden"
     fill="none"
     stroke="currentColor"
     viewBox="0 0 24 24"
