--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -3,30 +3,27 @@ import ThemeToggle from './ThemeToggle.astro';
 import { siteConfig } from '../config';
 
 const navItems = [
-  { href: '/', text: 'Home' },
-  { href: '/blog', text: 'Blog' },
-  { href: '/tags', text: 'Tags' },
-  { href: '/archive', text: 'Archive' },
+  { href: '/projects/concertworks', text: 'concert works' },
+  { href: '/projects/gameaudio', text: 'game audio' },
+  { href: '/about', text: 'about' },
+  { href: '/blog', text: 'blog' },
+  { href: '/contact', text: 'contact' },
 ];
 ---
 
-<header class="py-6">
-  <nav class="flex justify-between items-center flex-wrap">
-    <a href="/" class="text-2xl font-bold text-gray-900 dark:text-white">{ siteConfig.title }</a>
-    <div class="flex items-center gap-6">
-      <ul class="flex gap-6">
-        {navItems.map(({ href, text }) => (
-          <li>
-            <a
-              href={href}
-              class="text-gray-700 dark:text-gray-100 hover:text-gray-900 dark:hover:text-white"
-            >
-              {text}
-            </a>
-          </li>
-        ))}
-      </ul>
-      <ThemeToggle />
-    </div>
-  </nav>
-</header>
+<nav class="py-6 flex flex-wrap items-center justify-between">
+  <a href="/" class="text-2xl font-bold hover:bg-neutral-200 dark:hover:bg-neutral-700 rounded-md">
+    { siteConfig.title }
+  </a>
+  <div class="flex flex-wrap items-center gap-4 md:flex-nowrap ">
+    {navItems.map(({ href, text }) => (
+      <a
+        href={href}
+        class="hover:bg-neutral-200 dark:hover:bg-neutral-700 rounded-md"
+      >
+        {text}
+      </a>
+    ))}
+    <ThemeToggle />
+  </div>
+</nav>
