--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -5,7 +5,7 @@ import SocialLinks from '../components/SocialLinks.astro'
 
 
 
-<div class="mt-auto justify-self-auto flex items-center justify-between">
+<div class="mt-auto justify-self-auto flex items-center justify-between pb-4">
   <p class="text-xs text-gray-600 dark:text-gray-300">&copy; {currentYear} Maya Engel</p>
   <div class="transition-opacity duration-300 hover:opacity-90 "><SocialLinks /></div>
 </div>
