--- a/src/pages/contact/index.astro
+++ b/src/pages/contact/index.astro
@@ -7,7 +7,7 @@ import { siteConfig } from '../../config';
 <BaseLayout title={siteConfig.title}>
   <h1 class="text-4xl font-bold mb-8">Contact</h1>
   <div class="text-left mb-16 mt-20">
-    contact
+    Email me <a href="mailto:mayaengelmusic@gmail.com" class="hover:bg-neutral-200 dark:hover:bg-neutral-700 rounded-md" >mayaengelmusic@gmail.com</a>
   </div>
 
 </BaseLayout>
