--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -8,12 +8,13 @@ interface Props {
   description?: string
 }
 
-const { title, description = 'A minimal blog focused on excellent reading experience' } = Astro.props
+const { title, description = 'Portfolio' } = Astro.props
 ---
 
 <!doctype html>
 <html lang="en" class="min-h-screen flex flex-col">
   <head>
+    <link rel="sitemap" href="/sitemap-index.xml" />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content={description} />
@@ -24,7 +25,7 @@ const { title, description = 'A minimal blog focused on excellent reading experi
   <body class="text-black dark:text-white  min-h-screen bg-white dark:bg-gray-900 flex-1">
     <div class="max-w-3xl mx-auto px-4 sm:px-6 lg:px-8">
       <Header transition:persist />
-      <main class="py-12 mb-auto" transition:animate={slide({ duration: '.3s' })}>
+      <main class="py-2 mb-auto" transition:animate={slide({ duration: '.3s' })}>
         <slot />
       </main>
       <Footer transition:persist />
